Actions
Bug #14229
closedAn exception in eval has strange message
Bug #14229:
An exception in eval has strange message
Description
Is this intentional? If so, I'm curious what purpose it is for.
This leads to progressive backtrace message:
Updated by shevegen (Robert A. Heiler) over 8 years ago
Is this only with miniruby?
I get "undefined local variable or method `e' for main:Object"
for a newly created "test.rb" file.
The e.message part confuses me, was this part of a larger code
snippet?
Updated by naruse (Yui NARUSE) over 8 years ago
- Target version deleted (
2.6)
Updated by phluid61 (Matthew Kerwin) over 8 years ago
Updated by mame (Yusuke Endoh) over 8 years ago
phluid61 (Matthew Kerwin) wrote:
shevegen (Robert A. Heiler) wrote:
I get "undefined local variable or method `e' for main:Object"
for a newly created "test.rb" file.
Sorry it was buggy. phluid61 is correct.
Updated by nobu (Nobuyoshi Nakada) over 8 years ago
- Target version set to 2.6
I think I've filed this issue already (and discussed at a developers' meeting), but I can't remember the number.
Updated by nobu (Nobuyoshi Nakada) over 8 years ago
- Related to Feature #12338: bypass Exception.new added
Updated by nobu (Nobuyoshi Nakada) over 8 years ago
Updated by nobu (Nobuyoshi Nakada) over 8 years ago
- Status changed from Assigned to Closed
Applied in changeset trunk|r61482.
vm_eval.c: strange message in eval
- vm_eval.c (eval_string_with_cref): remove unnecessary location
from exception backtrace in eval.
[ruby-core:84434] [Bug #14229]
Actions